Ajout de l'image Action Man à index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
- <head><title>Premier labo</title></head>
+<head>
+    <title>bienvenue</title>
+</head>
 <body>
-<h1>Mise en œuvre CI/CD</h1>
+    <h1>aaaaaaaa</h1>
+    <img src="action man resurrection2.jpg" alt="Action Man Resurrection 2" width="500">
 </body>
 </html>
-La page proxhess est en ligne !
