--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-    <title>bienbienvenue</title>
+  <meta charset="UTF-8">
+  <title>bienbienvenue</title>
 </head>
 <body>
-    <h1>aaaaaaaa</h1>
-    <img src="action man resurrection2.jpg" alt="Action Man Resurrection 2" width="500">
+  <h1>aaaaaaaaaaaaaa</h1>
+  <img src="action-man-resurrection2.jpg" alt="Action Man Resurrection">
 </body>
 </html>
